--- a/options/test/BasicVSR/test_BasicVSR_REDS_BIx4.yml
+++ b/options/test/BasicVSR/test_BasicVSR_REDS_BIx4.yml
@@ -1,4 +1,4 @@
-name: BasicVSR_Vimeo90K_BD
+name: BasicVSR_REDS_BI
 model_type: VideoRecurrentModelPruneL1
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -6,16 +6,14 @@ manual_seed: 0
 
 datasets:
   test_1:  # the 1st test dataset
-    name: Vimeo90K
-    type: VideoTestVimeo90KDataset
-    dataroot_gt: /mnt/bn/xiabinsr/datasets/vimeo90k/vimeo_septuplet/sequences
-    dataroot_lq: /mnt/bn/xiabinsr/datasets/vimeo90k/BDx4
-    meta_info_file: basicsr/data/meta_info/meta_info_Vimeo90K_test_GT.txt
-    cache_data: false
+    name: REDS4
+    type: VideoRecurrentTestDataset
+    dataroot_gt: /mnt/bn/xiabinsr/datasets/REDS4/val_sharp
+    dataroot_lq: /mnt/bn/xiabinsr/datasets/REDS4/val_sharp_bicubic/X4
+    cache_data: True
     io_backend:
       type: disk
-    num_frame: 7
-
+    num_frame: -1  # not needed
 
 # network structures
 network_g:
@@ -26,7 +24,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_pruned: experiments/pretrained_models/Vimeo_BD/SSL_Vimeo_BD.pt
+  pretrain_network_pruned: ./experiments/pretrained_models/REDS_BI/SSL_REDS_BI.pt
   pretrain_network_g_pruned: ~
   pretrain_network_g: ~
   strict_load_g: true
@@ -34,16 +32,14 @@ path:
 # validation settings
 val:
   save_img: false
-  flip_seq: true
-  center_frame_only: true
   suffix: ~  # add suffix to saved images, if None, use exp name
 
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
       crop_border: 0
-      test_y_channel: true
+      test_y_channel: False
     ssim:
       type: calculate_ssim
       crop_border: 0
-      test_y_channel: true
+      test_y_channel: True
