--- a/options/test/BasicVSR/test_BasicVSR_Udm10_BDx4.yml
+++ b/options/test/BasicVSR/test_BasicVSR_Udm10_BDx4.yml
@@ -1,4 +1,4 @@
-name: BasicVSR_BD_UDM100
+name: BasicVSR_UDM100_BD
 model_type: VideoRecurrentModelPruneL1
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -8,8 +8,8 @@ datasets:
   test:
     name: Vid4
     type: VideoRecurrentTestDataset
-    dataroot_gt: /root/datasets/udm10/GT
-    dataroot_lq: /root/datasets/udm10/BDx4
+    dataroot_gt: /mnt/bn/xiabinsr/datasets/udm10/GT
+    dataroot_lq: /mnt/bn/xiabinsr/datasets/udm10/BDx4
     cache_data: True
     io_backend:
       type: disk
@@ -24,7 +24,8 @@ network_g:
 
 # path
 path:
-  pretrain_network_pruned: experiments/pretrained_models/model_prune_final.pt
+  pretrain_network_pruned: experiments/pretrained_models/Vimeo_BD/SSL_Vimeo_BD.pt
+  pretrain_network_g_pruned: ~
   pretrain_network_g: ~
   strict_load_g: true
 
