--- a/options/test/BasicVSR/test_BasicVSR_Vid4_BDx4.yml
+++ b/options/test/BasicVSR/test_BasicVSR_Vid4_BDx4.yml
@@ -1,4 +1,4 @@
-name: BasicVSR_Vid4
+name: BasicVSR_Vid4_BD
 model_type: VideoRecurrentModelPruneL1
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -8,8 +8,8 @@ datasets:
   val:
     name: Vid4
     type: VideoRecurrentTestDataset
-    dataroot_gt: /root/datasets/vid4/GT
-    dataroot_lq: /root/datasets/vid4/BDx4
+    dataroot_gt: /mnt/bn/xiabinsr/datasets/vid4/GT
+    dataroot_lq: /mnt/bn/xiabinsr/datasets/vid4/BDx4
     cache_data: True
     io_backend:
       type: disk
@@ -25,7 +25,8 @@ network_g:
 
 # path
 path:
-  pretrain_network_pruned: experiments/pretrained_models/model_prune_final.pt
+  pretrain_network_pruned: experiments/pretrained_models/Vimeo_BD/SSL_Vimeo_BD.pt
+  pretrain_network_g_pruned: ~
   pretrain_network_g: ~
   strict_load_g: true
 
